add_executable(example_rectangle_1 rectangle_1.cpp)
target_link_libraries(example_rectangle_1 PUBLIC matplot)

add_executable(example_rectangle_2 rectangle_2.cpp)
target_link_libraries(example_rectangle_2 PUBLIC matplot)

add_executable(example_rectangle_3 rectangle_3.cpp)
target_link_libraries(example_rectangle_3 PUBLIC matplot)

add_executable(example_rectangle_4 rectangle_4.cpp)
target_link_libraries(example_rectangle_4 PUBLIC matplot)

add_executable(example_rectangle_5 rectangle_5.cpp)
target_link_libraries(example_rectangle_5 PUBLIC matplot)



