add_executable(example_text_1 text_1.cpp)
target_link_libraries(example_text_1 PUBLIC matplot)

add_executable(example_text_2 text_2.cpp)
target_link_libraries(example_text_2 PUBLIC matplot)

add_executable(example_text_3 text_3.cpp)
target_link_libraries(example_text_3 PUBLIC matplot)

add_executable(example_text_4 text_4.cpp)
target_link_libraries(example_text_4 PUBLIC matplot)

add_executable(example_text_5 text_5.cpp)
target_link_libraries(example_text_5 PUBLIC matplot)

add_executable(example_text_6 text_6.cpp)
target_link_libraries(example_text_6 PUBLIC matplot)

add_executable(example_text_7 text_7.cpp)
target_link_libraries(example_text_7 PUBLIC matplot)

add_executable(example_text_8 text_8.cpp)
target_link_libraries(example_text_8 PUBLIC matplot)
