add_executable(example_axes_1 axes_1.cpp)
target_link_libraries(example_axes_1 PUBLIC matplot)

add_executable(example_axes_2 axes_2.cpp)
target_link_libraries(example_axes_2 PUBLIC matplot)

add_executable(example_axes_3 axes_3.cpp)
target_link_libraries(example_axes_3 PUBLIC matplot)

add_executable(example_axes_4 axes_4.cpp)
target_link_libraries(example_axes_4 PUBLIC matplot)



