add_executable(example_figure_1 figure_1.cpp)
target_link_libraries(example_figure_1 PUBLIC matplot)

add_executable(example_figure_2 figure_2.cpp)
target_link_libraries(example_figure_2 PUBLIC matplot)

add_executable(example_figure_3 figure_3.cpp)
target_link_libraries(example_figure_3 PUBLIC matplot)