add_executable(example_contour_1 contour_1.cpp)
target_link_libraries(example_contour_1 PUBLIC matplot)

add_executable(example_contour_2 contour_2.cpp)
target_link_libraries(example_contour_2 PUBLIC matplot)

add_executable(example_contour_3 contour_3.cpp)
target_link_libraries(example_contour_3 PUBLIC matplot)

add_executable(example_contour_4 contour_4.cpp)
target_link_libraries(example_contour_4 PUBLIC matplot)

add_executable(example_contour_5 contour_5.cpp)
target_link_libraries(example_contour_5 PUBLIC matplot)

add_executable(example_contour_6 contour_6.cpp)
target_link_libraries(example_contour_6 PUBLIC matplot)

add_executable(example_contour_7 contour_7.cpp)
target_link_libraries(example_contour_7 PUBLIC matplot)

add_executable(example_contour_8 contour_8.cpp)
target_link_libraries(example_contour_8 PUBLIC matplot)