add_executable(example_contourf_1 contourf_1.cpp)
target_link_libraries(example_contourf_1 PUBLIC matplot)

add_executable(example_contourf_2 contourf_2.cpp)
target_link_libraries(example_contourf_2 PUBLIC matplot)

add_executable(example_contourf_3 contourf_3.cpp)
target_link_libraries(example_contourf_3 PUBLIC matplot)

add_executable(example_contourf_4 contourf_4.cpp)
target_link_libraries(example_contourf_4 PUBLIC matplot)

add_executable(example_contourf_5 contourf_5.cpp)
target_link_libraries(example_contourf_5 PUBLIC matplot)

add_executable(example_contourf_6 contourf_6.cpp)
target_link_libraries(example_contourf_6 PUBLIC matplot)