add_executable(example_fcontour_1 fcontour_1.cpp)
target_link_libraries(example_fcontour_1 PUBLIC matplot)

add_executable(example_fcontour_2 fcontour_2.cpp)
target_link_libraries(example_fcontour_2 PUBLIC matplot)

add_executable(example_fcontour_3 fcontour_3.cpp)
target_link_libraries(example_fcontour_3 PUBLIC matplot)

add_executable(example_fcontour_4 fcontour_4.cpp)
target_link_libraries(example_fcontour_4 PUBLIC matplot)

add_executable(example_fcontour_5 fcontour_5.cpp)
target_link_libraries(example_fcontour_5 PUBLIC matplot)

add_executable(example_fcontour_6 fcontour_6.cpp)
target_link_libraries(example_fcontour_6 PUBLIC matplot)

add_executable(example_fcontour_7 fcontour_7.cpp)
target_link_libraries(example_fcontour_7 PUBLIC matplot)

add_executable(example_fcontour_8 fcontour_8.cpp)
target_link_libraries(example_fcontour_8 PUBLIC matplot)

add_executable(example_fcontour_9 fcontour_9.cpp)
target_link_libraries(example_fcontour_9 PUBLIC matplot)

add_executable(example_fcontour_10 fcontour_10.cpp)
target_link_libraries(example_fcontour_10 PUBLIC matplot)

add_executable(example_fcontour_11 fcontour_11.cpp)
target_link_libraries(example_fcontour_11 PUBLIC matplot)
