add_executable(example_heatmap_1 heatmap_1.cpp)
target_link_libraries(example_heatmap_1 PUBLIC matplot)

add_executable(example_heatmap_2 heatmap_2.cpp)
target_link_libraries(example_heatmap_2 PUBLIC matplot)

add_executable(example_heatmap_3 heatmap_3.cpp)
target_link_libraries(example_heatmap_3 PUBLIC matplot)

add_executable(example_heatmap_4 heatmap_4.cpp)
target_link_libraries(example_heatmap_4 PUBLIC matplot)

add_executable(example_heatmap_5 heatmap_5.cpp)
target_link_libraries(example_heatmap_5 PUBLIC matplot)

add_executable(example_heatmap_6 heatmap_6.cpp)
target_link_libraries(example_heatmap_6 PUBLIC matplot)

add_executable(example_heatmap_7 heatmap_7.cpp)
target_link_libraries(example_heatmap_7 PUBLIC matplot)
