add_executable(example_pie_1 pie_1.cpp)
target_link_libraries(example_pie_1 PUBLIC matplot)

add_executable(example_pie_2 pie_2.cpp)
target_link_libraries(example_pie_2 PUBLIC matplot)

add_executable(example_pie_3 pie_3.cpp)
target_link_libraries(example_pie_3 PUBLIC matplot)

add_executable(example_pie_4 pie_4.cpp)
target_link_libraries(example_pie_4 PUBLIC matplot)

add_executable(example_pie_5 pie_5.cpp)
target_link_libraries(example_pie_5 PUBLIC matplot)

add_executable(example_pie_6 pie_6.cpp)
target_link_libraries(example_pie_6 PUBLIC matplot)