add_executable(example_plotmatrix_1 plotmatrix_1.cpp)
target_link_libraries(example_plotmatrix_1 PUBLIC matplot)

add_executable(example_plotmatrix_2 plotmatrix_2.cpp)
target_link_libraries(example_plotmatrix_2 PUBLIC matplot)

add_executable(example_plotmatrix_3 plotmatrix_3.cpp)
target_link_libraries(example_plotmatrix_3 PUBLIC matplot)

add_executable(example_plotmatrix_4 plotmatrix_4.cpp)
target_link_libraries(example_plotmatrix_4 PUBLIC matplot)



