add_executable(example_scatter_1 scatter_1.cpp)
target_link_libraries(example_scatter_1 PUBLIC matplot)

add_executable(example_scatter_2 scatter_2.cpp)
target_link_libraries(example_scatter_2 PUBLIC matplot)

add_executable(example_scatter_3 scatter_3.cpp)
target_link_libraries(example_scatter_3 PUBLIC matplot)

add_executable(example_scatter_4 scatter_4.cpp)
target_link_libraries(example_scatter_4 PUBLIC matplot)

add_executable(example_scatter_5 scatter_5.cpp)
target_link_libraries(example_scatter_5 PUBLIC matplot)

add_executable(example_scatter_6 scatter_6.cpp)
target_link_libraries(example_scatter_6 PUBLIC matplot)

add_executable(example_scatter_7 scatter_7.cpp)
target_link_libraries(example_scatter_7 PUBLIC matplot)

add_executable(example_scatter_8 scatter_8.cpp)
target_link_libraries(example_scatter_8 PUBLIC matplot)



