add_executable(example_scatter3_1 scatter3_1.cpp)
target_link_libraries(example_scatter3_1 PUBLIC matplot)

add_executable(example_scatter3_2 scatter3_2.cpp)
target_link_libraries(example_scatter3_2 PUBLIC matplot)

add_executable(example_scatter3_3 scatter3_3.cpp)
target_link_libraries(example_scatter3_3 PUBLIC matplot)

add_executable(example_scatter3_4 scatter3_4.cpp)
target_link_libraries(example_scatter3_4 PUBLIC matplot)

add_executable(example_scatter3_5 scatter3_5.cpp)
target_link_libraries(example_scatter3_5 PUBLIC matplot)

add_executable(example_scatter3_6 scatter3_6.cpp)
target_link_libraries(example_scatter3_6 PUBLIC matplot)

add_executable(example_scatter3_7 scatter3_7.cpp)
target_link_libraries(example_scatter3_7 PUBLIC matplot)
