add_executable(example_wordcloud_1 wordcloud_1.cpp)
target_link_libraries(example_wordcloud_1 PUBLIC matplot)

add_executable(example_wordcloud_2 wordcloud_3.cpp)
target_link_libraries(example_wordcloud_2 PUBLIC matplot)

add_executable(example_wordcloud_3 wordcloud_4.cpp)
target_link_libraries(example_wordcloud_3 PUBLIC matplot)

add_executable(example_wordcloud_4 wordcloud_4.cpp)
target_link_libraries(example_wordcloud_4 PUBLIC matplot)



