add_executable(example_bar_1 bar_1.cpp)
target_link_libraries(example_bar_1 PUBLIC matplot)

add_executable(example_bar_2 bar_2.cpp)
target_link_libraries(example_bar_2 PUBLIC matplot)

add_executable(example_bar_3 bar_3.cpp)
target_link_libraries(example_bar_3 PUBLIC matplot)

add_executable(example_bar_4 bar_4.cpp)
target_link_libraries(example_bar_4 PUBLIC matplot)

add_executable(example_bar_5 bar_5.cpp)
target_link_libraries(example_bar_5 PUBLIC matplot)

add_executable(example_bar_6 bar_6.cpp)
target_link_libraries(example_bar_6 PUBLIC matplot)

add_executable(example_bar_7 bar_7.cpp)
target_link_libraries(example_bar_7 PUBLIC matplot)

add_executable(example_bar_8 bar_8.cpp)
target_link_libraries(example_bar_8 PUBLIC matplot)

add_executable(example_bar_9 bar_9.cpp)
target_link_libraries(example_bar_9 PUBLIC matplot)

add_executable(example_bar_10 bar_10.cpp)
target_link_libraries(example_bar_10 PUBLIC matplot)

add_executable(example_bar_11 bar_11.cpp)
target_link_libraries(example_bar_11 PUBLIC matplot)

add_executable(example_bar_12 bar_12.cpp)
target_link_libraries(example_bar_12 PUBLIC matplot)

add_executable(example_bar_13 bar_13.cpp)
target_link_libraries(example_bar_13 PUBLIC matplot)
