add_executable(example_pareto_1 pareto_1.cpp)
target_link_libraries(example_pareto_1 PUBLIC matplot)

add_executable(example_pareto_2 pareto_2.cpp)
target_link_libraries(example_pareto_2 PUBLIC matplot)

add_executable(example_pareto_3 pareto_3.cpp)
target_link_libraries(example_pareto_3 PUBLIC matplot)

add_executable(example_pareto_4 pareto_4.cpp)
target_link_libraries(example_pareto_4 PUBLIC matplot)



