add_executable(example_stem_1 stem_1.cpp)
target_link_libraries(example_stem_1 PUBLIC matplot)

add_executable(example_stem_2 stem_2.cpp)
target_link_libraries(example_stem_2 PUBLIC matplot)

add_executable(example_stem_3 stem_3.cpp)
target_link_libraries(example_stem_3 PUBLIC matplot)

add_executable(example_stem_4 stem_4.cpp)
target_link_libraries(example_stem_4 PUBLIC matplot)

add_executable(example_stem_5 stem_5.cpp)
target_link_libraries(example_stem_5 PUBLIC matplot)

add_executable(example_stem_6 stem_6.cpp)
target_link_libraries(example_stem_6 PUBLIC matplot)

add_executable(example_stem_7 stem_7.cpp)
target_link_libraries(example_stem_7 PUBLIC matplot)

add_executable(example_stem_8 stem_8.cpp)
target_link_libraries(example_stem_8 PUBLIC matplot)

add_executable(example_stem_9 stem_9.cpp)
target_link_libraries(example_stem_9 PUBLIC matplot)
