add_executable(example_stem3_1 stem3_1.cpp)
target_link_libraries(example_stem3_1 PUBLIC matplot)

add_executable(example_stem3_2 stem3_2.cpp)
target_link_libraries(example_stem3_2 PUBLIC matplot)

add_executable(example_stem3_3 stem3_3.cpp)
target_link_libraries(example_stem3_3 PUBLIC matplot)

add_executable(example_stem3_4 stem3_4.cpp)
target_link_libraries(example_stem3_4 PUBLIC matplot)

add_executable(example_stem3_5 stem3_5.cpp)
target_link_libraries(example_stem3_5 PUBLIC matplot)

add_executable(example_stem3_6 stem3_6.cpp)
target_link_libraries(example_stem3_6 PUBLIC matplot)

add_executable(example_stem3_7 stem3_7.cpp)
target_link_libraries(example_stem3_7 PUBLIC matplot)

add_executable(example_stem3_8 stem3_8.cpp)
target_link_libraries(example_stem3_8 PUBLIC matplot)

add_executable(example_stem3_9 stem3_9.cpp)
target_link_libraries(example_stem3_9 PUBLIC matplot)

add_executable(example_stem3_10 stem3_10.cpp)
target_link_libraries(example_stem3_10 PUBLIC matplot)

add_executable(example_stem3_11 stem3_11.cpp)
target_link_libraries(example_stem3_11 PUBLIC matplot)
