add_executable(example_save_1 save_1.cpp)
target_link_libraries(example_save_1 PUBLIC matplot)

add_executable(example_save_2 save_2.cpp)
target_link_libraries(example_save_2 PUBLIC matplot)

add_executable(example_save_3 save_3.cpp)
target_link_libraries(example_save_3 PUBLIC matplot)

add_executable(example_save_4 save_4.cpp)
target_link_libraries(example_save_4 PUBLIC matplot)

add_executable(example_save_5 save_5.cpp)
target_link_libraries(example_save_5 PUBLIC matplot)

add_executable(example_save_6 save_6.cpp)
target_link_libraries(example_save_6 PUBLIC matplot)

add_executable(example_save_7 save_7.cpp)
target_link_libraries(example_save_7 PUBLIC matplot)

add_executable(example_save_8 save_8.cpp)
target_link_libraries(example_save_8 PUBLIC matplot)