add_executable(example_geoplot_1 geoplot_1.cpp)
target_link_libraries(example_geoplot_1 PUBLIC matplot)

add_executable(example_geoplot_2 geoplot_2.cpp)
target_link_libraries(example_geoplot_2 PUBLIC matplot)

add_executable(example_geoplot_3 geoplot_3.cpp)
target_link_libraries(example_geoplot_3 PUBLIC matplot)

add_executable(example_geoplot_4 geoplot_4.cpp)
target_link_libraries(example_geoplot_4 PUBLIC matplot)

add_executable(example_geoplot_5 geoplot_5.cpp)
target_link_libraries(example_geoplot_5 PUBLIC matplot)

add_executable(example_geoplot_6 geoplot_6.cpp)
target_link_libraries(example_geoplot_6 PUBLIC matplot)

add_executable(example_geoplot_7 geoplot_7.cpp)
target_link_libraries(example_geoplot_7 PUBLIC matplot)